[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "part_one"
path = "src/part_one.rs"

[[bin]]
name = "part_two"
path = "src/part_two.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onig = { version = "6.4.0", default-features = false }
regex = "1.10.2"
